# eos

./: .gitignore  README.md  pyproject.toml  setup.py
eos/: __init__.py
eos/abpr/: eos.py
eos/alphabag/: compute_tables.py  eos.py  parameters.py  thermodynamics_quarks.py
eos/general/: bose_integrals.py  eos_solver.py  fermi_integrals.py  particles.py  plotting_info.py  thermodynamics_leptons.py
eos/mixed_phase/: eos.py
eos/sfho/: compare_with_compose.py  compute_tables.py  eos.py  nuclear_saturation_properties.py  parameters.py  thermodynamics_hadrons.py
eos/sfhoalphabag/: hybrid_table_generator.py  mixed_phase_eos.py
eos/tov/: solver.py
eos/vmit/: compute_tables.py  eos.py  parameters.py  thermodynamics_quarks.py
eos/zl/: compute_tables.py  eos.py  thermodynamics_nucleons.py
eos/zlvmit/: hybrid_table_generator.py  isentropic.py  mixed_phase_eos.py  plot_results.py  table_reader.py  trapped_solvers.py
