[project]
name = "eos"
version = "0.1.0"
description = "Equation of State codes for dense matter in neutron stars"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eos*"]
